--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -29,6 +29,12 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
+html {
+  background-color: #f8f1ea;
+}
+
+
+
 .container {
   max-width: var(--ifm-container-width-xl);
 }
