config.js changes

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -206,7 +206,7 @@ html[data-theme='light'] {
 /* ----------------------------------------------------------------------------- */
 
 .background-image {
-  background-image: url("../../static/img/Hero_Homepage\ 1.png");
+  background-image: url("../../static/img/Hero_BC\ 1.png");
   background-size: cover;
   flex: 1 0 auto;
   display: flex;
