--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -289,6 +289,7 @@ html[data-theme='light'] {
   --font-size-normal-text: 14pt;
   --font-size-normal-header: 18pt;
   --font-size-big-header: 20pt;
+  --font-size-medium-header: 18pt;
   --font-family-document: 'Times New Roman', Times, serif;
 }
 
@@ -339,6 +340,10 @@ html[data-theme='light'] {
 .paragraph-big h2 {
   font-family: var(--font-family-document);
   font-size: var(--font-size-big-header);
+}
+.paragraph-medium h2 {
+  font-family: var(--font-family-document);
+  font-size: var(--font-size-medium-header);
 }
 .paragraph-text {  
   font-family: var(--font-family-document);
