DE external site links. Magic version.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -905,4 +905,33 @@ img[alt="large"] {
 
 /* END Agreement documents styling */
 
+.miniscule {
+  font-size: 8pt;
+  font-style: italic;
+}
+
+.doc-iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+  left: 0px;
+  position: absolute;
+  scrollbar-width: 1px;
+}
+
+/* Temp stuff */
+.footer__items a[href="/business-central/docs/papers/TaE/intro"] {
+  color: #feddb8;
+}
+.footer__items a[href="/business-central/de/docs/papers/TaE/intro"] {
+  color: #feddb8;
+}
+
+/*
+.footer__link-item:nth-of-type(odd) {
+  background-color: red;
+}
+*/
+
+
 
