Fix of links to new prodsite. Activated Spanish lang choice.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1073,7 +1073,9 @@ img[alt="large"] {
   border: none; /* Remove default border */
 }
 
+/*
 .dropdown--hoverable ul li:nth-child(3) {
   display: none;
 }
 
+*/
