Trying to dislodge previous commit.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1102,9 +1102,10 @@ img[alt="large"] {
 }
 */
 
-/* ----------------------------------------------------------------------------- */
-/*  EA 2025-04-10 Adding some support for mobile devices                         */
-/* ----------------------------------------------------------------------------- */
+/* ------------------------------------------------------------------------------ */
+/*  EA 2025-04-10 Adding some support for mobile devices                          */
+/*  Android, IOS                                                                  */
+/* ------------------------------------------------------------------------------ */
 
 @media only screen and (max-width: 900px) {
   .main-title {
